Numpy research added

--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -12,7 +12,48 @@
     "- **Dates** October 2019 to November 2019\n",
     "\n",
     "#### Introduction\n",
-    "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' Assignment. The project includes a review of the numpy.random function in Python. This jupyter notebook uses the python programming language (https://www.python.org/) to illustrate this function."
+    "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' Assignment. The project includes a review of the numpy.random(**1**) function in Python(**2**). This jupyter notebook uses the python programming language to illustrate this function.\n",
+    "\n",
+    "#### NumPy\n",
+    "NumPy(**3**) is a library module in Python. NumPy is an abbreviation of 'Numerical Python' and is generally used for scientific computing and number crunching. The core element of NumPy is a multidimensional array objects referred to as _'ndarray'_ objects. NumPy utilise elements of compiled C and C++ code in the background so that operations undertaken on these ndarrays are very efficient. However, the ndarrary can only contain items of the same type and size are are usually of fixed size. \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### References\n",
+    "\n",
+    "**(1)** _NumPy.random_\n",
+    "- https://docs.scipy.org/doc/numpy-1.16.0/reference/routines.random.html\n",
+    "\n",
+    "**(2)** _Python programming language_\n",
+    "- https://www.python.org/\n",
+    "\n",
+    "**(3)** _NumPy_\n",
+    "- https://docs.scipy.org/doc/numpy-1.16.0/\n",
+    "- https://www.quora.com/What-is-NumPy\n",
+    "- https://docs.scipy.org/doc/numpy-1.16.0/user/whatisnumpy.html\n",
+    "- https://numpy.org/devdocs/reference/arrays.ndarray.html\n",
+    "\n"
    ]
   },
   {
