--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -11,13 +11,16 @@
     "- **Email** g00376335@gmit.ie\n",
     "- **Dates** October 2019 to November 2019\n",
     "\n",
-    "#### Introduction\n",
+    "### Introduction\n",
     "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' Assignment. The project includes a review of the numpy.random(**1**) function in Python(**2**). This jupyter notebook uses the python programming language to illustrate this function.\n",
     "\n",
-    "#### NumPy\n",
-    "NumPy(**3**) is a library module in Python. NumPy is an abbreviation of 'Numerical Python' and is generally used for scientific computing and number crunching. The core element of NumPy is a multidimensional array objects referred to as _'ndarray'_ objects. NumPy utilise elements of compiled C and C++ code in the background so that operations undertaken on these ndarrays are very efficient. However, the ndarrary can only contain items of the same type and size are are usually of fixed size. \n",
+    "### Description and Purpose of numpy.random\n",
     "\n",
-    "\n"
+    "#### NumPy\n",
+    "NumPy(**3**) is a library module in Python. NumPy is an abbreviation of 'Numerical Python' or ‘Numeric Python’ and is generally used for scientific computing and number crunching. The core element of NumPy are homogeneous multidimensional array objects referred to as _'ndarray'_. These objects can only contain items of the same type and size, are defined by their shape and are usually of fixed size. Numpy is often used with other Python libraries such as Pandas to overcome some of these limitations.\n",
+    "NumPy utilises elements of compiled C and C++ code in the background so that operations undertaken on these objects are very efficient.\n",
+    "\n",
+    "NumPy does not come loaded into the standard Python installation. The library has to imported into a Python session used the import command. On import the library is often abbreviated to 'np' to shorten use of the library name for functions contained within the library. Typically NumPy is imported using the following command."
    ]
   },
   {
@@ -26,8 +29,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import NumPy library into Python session\n",
     "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random numbers\n",
+    "Computers can not really generate random numbers(**4**). They are limited by their programming and follow rules based on various algorithms contained in the programming. Based on these algorithms, computers can be used to generate what appears to a random sequence of numbers. These are called **‘pseudo-random’** numbers. However, no matter how complex an algorithms, if you know what algorithms was used and you know the starting point of the computation, the results can be predicted. This starting point is referred to as the **'seed'** number of the algorithm.\n",
+    "\n",
+    "Random numbers are useful in data analysis for simulating data. Simulation(**5**) is often used to verify solutions for mathematical models of natural scientific systems. This allow analysts to make inferences and predictions from the models without having to undertake real experiments. Such experiments are often referred to as _Monte Carlo Methods_ (**6**).\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "The function _numpy.random_(**1**) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -42,8 +75,9 @@
    "source": [
     "#### References\n",
     "\n",
-    "**(1)** _NumPy.random_\n",
+    "**(1)** _numpy.random_\n",
     "- https://docs.scipy.org/doc/numpy-1.16.0/reference/routines.random.html\n",
+    "- https://numpy.org/doc/1.17/reference/random/index.html\n",
     "\n",
     "**(2)** _Python programming language_\n",
     "- https://www.python.org/\n",
@@ -53,7 +87,19 @@
     "- https://www.quora.com/What-is-NumPy\n",
     "- https://docs.scipy.org/doc/numpy-1.16.0/user/whatisnumpy.html\n",
     "- https://numpy.org/devdocs/reference/arrays.ndarray.html\n",
-    "\n"
+    "- https://cloudxlab.com/blog/numpy-pandas-introduction/\n",
+    "\n",
+    "**(4)** _Random Numbers_\n",
+    "- https://analyticstraining.com/random-numbers-applications/\n",
+    "- https://engineering.mit.edu/engage/ask-an-engineer/can-a-computer-generate-a-truly-random-number/\n",
+    "- https://en.wikipedia.org/wiki/Random_seed\n",
+    "\n",
+    "**(5)** _Computer_Simulation_\n",
+    "- https://en.wikipedia.org/wiki/Computer_simulation\n",
+    "- https://www.britannica.com/technology/computer-simulation\n",
+    "\n",
+    "**(6)** _Monte Carlo Methods_\n",
+    "https://towardsdatascience.com/an-overview-of-monte-carlo-methods-675384eb1694\n"
    ]
   },
   {
