Marked down font colour and Python NumPy logos added

--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -4,22 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Programming for Data Analysis - Assignment\n",
-    "- **Course** Higher Diploma in Data Analytics, GMIT, Ireland\n",
+    "# <font color='blue'>Programming for Data Analysis - Assignment</font> <img src=\"https://i0.wp.com/www.simplifiedpython.net/wp-content/uploads/2018/11/Python-NumPy-14.png?w=672&ssl=1\" width=\"350\" height=\"350\" align=\"right\"/>\n",
+    "- **Course** Higher Diploma in Data Analytics, GMIT, Ireland \n",
     "- **Lecturer** Brian McGinley\n",
     "- **Author** Mark Cotter\n",
     "- **Email** g00376335@gmit.ie\n",
     "- **Dates** October 2019 to November 2019\n",
     "\n",
-    "### Introduction\n",
-    "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' Assignment. The assignment includes a review of the NumPy.Random(**1**) function included the Python(**2**) library module NumPy(**3**). This jupyter notebook uses the python programming language to illustrate routines included in this function.\n",
+    "### <font color='blue'>Introduction</font>\n",
+    "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' assignment. The assignment includes a review of the NumPy.Random(**1**) function included the Python(**2**) library module NumPy(**3**). This jupyter notebook uses the python programming language to illustrate routines included in this function.\n",
     "\n",
-    "### Random Numbers and Seeds\n",
+    "### <font color='blue'>Random Numbers and Seeds</font>\n",
     "Modern computers use randomly generated numbers for a multitude of purposes. Two important properties of a sequence of random numbers(**4**) are independence and uniformity.\n",
     "- Each number must be statistically independent of the previous number i.e. the probability of one number occurring is not dependent on another number\n",
     "- The numbers must have a equal/uniform probability of occurring. i.e. a sample of the numbers should be well distributed in the range\n",
     "\n",
-    "Computers can not really generate random numbers(**4**) on their own. They are limited by their programming and follow rules based on various algorithms contained in the programming. Programs in computer can be used to generate what appears to be a random sequence of numbers that are called **pseudo-random** numbers, but these are in fact a pattern with a very long repeating period. No matter how complex an algorithm, if you know what algorithm was used and you know the starting point of the computation, the results can be predicted and repeated. This starting point is referred to as the **seed** number of the algorithm. Seeds can be either a fixed or randomly selected numbers themselves such as the current time in milliseconds.\n",
+    "Computers can not really generate random numbers(**4**) on their own. They are limited by their programming and follow rules based on various algorithms contained in the programming. Programs can be used to generate what appears to be a random sequence of numbers that are called **pseudo-random** numbers, but these are in fact a pattern with a very long repeat period. No matter how complex an algorithm, if you know what algorithm was used and you know the starting point of the computation, the results can be predicted and repeated. This starting point is referred to as the **seed** number of the algorithm. Seeds can be either a fixed or randomly selected numbers themselves such as the current time in milliseconds.\n",
     "\n",
     "Sharing of a **pseudo-random seed** is often used for syncing security measures, where the seed number is commonly known by two or more remote pieces of equipment and is unknown to an outside observer. If the starting point of the algorithm is unknown, the outcome of an algorithm pattern can not be easily replicated.\n",
     "\n",
@@ -29,9 +29,9 @@
     "\n",
     "Where large datasets have been gathered, sampling random(**4**) selections of the data can be used to reduce the quantity of data, thereby reducing the processing time for data analysis.\n",
     "\n",
-    "### Description and Purpose of NumPy.Random\n",
+    "### <font color='blue'>Description and Purpose of NumPy.Random</font>\n",
     "\n",
-    "#### NumPy Python Library\n",
+    "#### <font color='blue'>NumPy Python Library</font>\n",
     "NumPy(**3**) is a library module for Python. NumPy is an abbreviation of 'Numerical Python' or ‘Numeric Python’ and is generally used for scientific computing and number crunching. The core of NumPy are homogeneous multidimensional array objects referred to as _'ndarray'_. These objects can only contain items of the same type and size, are defined by their shape and are usually of fixed size. NumPy is often used with other Python libraries such as Pandas to overcome some of these limitations.\n",
     "NumPy utilises elements of compiled C and C++ programming code in the background so that operations undertaken on NumPy objects are very efficient, which is very desirable when dealing with large quantities of data.\n",
     "\n",
@@ -52,35 +52,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NumPy.Random Purpose\n",
+    "#### <font color='blue'>NumPy.Random Purpose</font>\n",
     "Python's NymPy library contains a function called NumPy.Random(**1**). This function includes various routines for **pseudo random numbers generation**. The random sequence of numbered generated from NumPy.Random routines are generally outputted to NumPy ndarray objects of the required value type, size and shape. The random number generation routines are divided into four main categories of as follows:\n",
     "- Simple random data\n",
     "- Permutations\n",
     "- Distribution\n",
     "- Random generator\n",
     "\n",
-    "### Simple random data\n"
+    "### <font color='blue'>Simple random data</font>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Permutations\n"
+    "### <font color='blue'>Permutations</font>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distributions\n"
+    "### <font color='blue'>Distributions</font>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Research References\n",
+    "### <font color='blue'>Research References</font>\n",
     "\n",
     "**(1)** _NumPy.Random_\n",
     "- https://docs.scipy.org/doc/numpy-1.16.0/reference/routines.random.html\n",
@@ -111,12 +111,18 @@
     "- https://www.britannica.com/technology/computer-simulation\n",
     "\n",
     "**(6)** _Monte Carlo Methods_\n",
-    "- https://towardsdatascience.com/an-overview-of-monte-carlo-methods-675384eb1694\n"
+    "- https://towardsdatascience.com/an-overview-of-monte-carlo-methods-675384eb1694\n",
+    "\n",
+    "**(6)** _Marked Down Formatting_\n",
+    "- https://stackoverflow.com/questions/46439874/display-image-jupyter-notebook-aligned-centre\n",
+    "- https://stackoverflow.com/questions/19746350/how-does-one-change-color-in-markdown-cells-ipython-jupyter-notebook\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
