logo position edit

--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='blue'>Programming for Data Analysis - Assignment</font> <img src=\"https://i0.wp.com/www.simplifiedpython.net/wp-content/uploads/2018/11/Python-NumPy-14.png?w=672&ssl=1\" width=\"350\" height=\"350\" align=\"right\"/>\n",
+    "# <font color='blue'>Programming for Data Analysis - Assignment</font>\n",
+    "<img src=\"https://i0.wp.com/www.simplifiedpython.net/wp-content/uploads/2018/11/Python-NumPy-14.png?w=672&ssl=1\" width=\"350\" height=\"350\" align=\"right\"/>\n",
+    "\n",
     "- **Course** Higher Diploma in Data Analytics, GMIT, Ireland \n",
     "- **Lecturer** Brian McGinley\n",
     "- **Author** Mark Cotter\n",
