logo position edit 2

--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -5,7 +5,6 @@
    "metadata": {},
    "source": [
     "# <font color='blue'>Programming for Data Analysis - Assignment</font>\n",
-    "<img src=\"https://i0.wp.com/www.simplifiedpython.net/wp-content/uploads/2018/11/Python-NumPy-14.png?w=672&ssl=1\" width=\"350\" height=\"350\" align=\"right\"/>\n",
     "\n",
     "- **Course** Higher Diploma in Data Analytics, GMIT, Ireland \n",
     "- **Lecturer** Brian McGinley\n",
@@ -14,8 +13,20 @@
     "- **Dates** October 2019 to November 2019\n",
     "\n",
     "### <font color='blue'>Introduction</font>\n",
-    "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' assignment. The assignment includes a review of the NumPy.Random(**1**) function included the Python(**2**) library module NumPy(**3**). This jupyter notebook uses the python programming language to illustrate routines included in this function.\n",
-    "\n",
+    "This document is my jupyter notebook file for the GMIT module 'Programming for Data Analysis' assignment. The assignment includes a review of the NumPy.Random(**1**) function included the Python(**2**) library module NumPy(**3**). This jupyter notebook uses the python programming language to illustrate routines included in this function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://i0.wp.com/www.simplifiedpython.net/wp-content/uploads/2018/11/Python-NumPy-14.png?w=672&ssl=1\" width=\"350\" height=\"350\" align=\"left\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <font color='blue'>Random Numbers and Seeds</font>\n",
     "Modern computers use randomly generated numbers for a multitude of purposes. Two important properties of a sequence of random numbers(**4**) are independence and uniformity.\n",
     "- Each number must be statistically independent of the previous number i.e. the probability of one number occurring is not dependent on another number\n",
