--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -61,7 +61,7 @@
     "- Random generator\n",
     "\n",
     "### <font color='blue'>Simple random data</font>\n",
-    "Routines included in this NumPy.Random category include rand(), randn(), random(), choice() and bytes(). The following code explores a number of these routines\n",
+    "Routines included in this NumPy.Random category include rand(), randn(), random(), choice() and bytes(). The following code explores a number of these routines.\n",
     "\n",
     "#### <font color='blue'>NumPy.Random.rand()</font>\n",
     "<font color='blue'>[1]</font> The rand(d0,d1,...,dn) routine from NumPy.Random(**1**) when called can take a variable number of arguments."
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>[2]</font> When the rand() routine is run without an argument, it returns a random floating point number. The value of the number generated is between 0.0 and 1.0."
+    "<font color='blue'>[2]</font> When the rand() routine is run without an argument, it returns a random floating point number. The value of the number generated appears to lie between 0.0 and 1.0."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>[3]</font> When the rand() routine is run with one or more integer number arguments, it returns a numpy ndarrary containing random floating point numbers. The shape and size of the ndarrary depends on number of the arguments and their numerical value. The values of the numbers generated are uniformly distributed between 0.0 and 1.0. The NumPy.Random(**1**) webpage for rand() notes that the range is **[0, 1)** meaning that the value range is **(0 =< value < 1)**."
+    "<font color='blue'>[3]</font> When the rand() routine is run with one or more integer number arguments, it returns a numpy ndarray containing random floating point numbers. The shape and size of the ndarray created depends on number of the arguments and their numerical values. The values of the numbers generated are uniformly distributed between 0.0 and 1.0. The NumPy.Random(**1**) webpage for rand() notes that the range is **[0, 1)** meaning that the value range is **(0 =< value < 1)**."
    ]
   },
   {
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>[4]</font> Zero value, negative values and floating point values are not acceptable argument inputs for the rand() routine. These generate AttributeError, ValueError and TypeError respectively. These error generating arguments have been commented out in the above 3 cells."
+    "<font color='blue'>[4]</font> Zero value, negative values and floating point values are not acceptable argument values for the rand() routine. These generate AttributeError, ValueError and TypeError respectively. Note that these error generating arguments have been commented out in the above 3 cells."
    ]
   },
   {
@@ -353,9 +353,10 @@
     "**(6)** _Monte Carlo Methods_\n",
     "- https://towardsdatascience.com/an-overview-of-monte-carlo-methods-675384eb1694\n",
     "\n",
-    "**(6)** _Marked Down Formatting_\n",
+    "**(6)** _Marked Down Formatting and Image Sources_\n",
     "- https://stackoverflow.com/questions/46439874/display-image-jupyter-notebook-aligned-centre\n",
-    "- https://stackoverflow.com/questions/19746350/how-does-one-change-color-in-markdown-cells-ipython-jupyter-notebook\n"
+    "- https://stackoverflow.com/questions/19746350/how-does-one-change-color-in-markdown-cells-ipython-jupyter-notebook\n",
+    "- https://i0.wp.com/www.simplifiedpython.net/wp-content/uploads/2018/11/Python-NumPy-14.png?w=672&ssl=1\n"
    ]
   },
   {
