draft shuffle() section added

--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -1076,13 +1076,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1090,32 +1083,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The permutations category of numpy.random include two routine called shuffle() and permutation(), which are explored in the following sub-sections.\n",
+    "\n",
+    "#### <font color='blue'>numpy.random.shuffle()</font>\n",
+    "shuffle() routine from numpy.random(**1**) can take exactly one array object argument<font color='blue'>[1]</font> and changes the order of elements of that object. The function only returns **None**, but after the routines purpose is to only modify the object passed to it. The routine can be run on the object repeatedly to generate different results\n",
+    "\n",
+    "The shuffle() routine can not be run <font color='blue'>[2]</font> with no argument, single number argument, multiple arguments or with a negative argument as these generate TypeError.\n",
+    "\n",
+    "<font color='blue'>[1] _One array argument_ </font>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array order:\n",
+      " [0, 1, 2, 3, 4] <class 'list'>\n",
+      "1st shuffle array order:\n",
+      " [1, 4, 2, 3, 0] <class 'list'>\n",
+      "2nd shuffle array order:\n",
+      " [4, 2, 1, 0, 3] <class 'list'> \n",
+      "\n",
+      "What is returned from shuffle() routine is: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array of number\n",
+    "# Code adapted from \n",
+    "# https://docs.scipy.org/doc/numpy-1.16.0/reference/generated/numpy.random.shuffle.html#numpy.random.shuffle\n",
+    "array = [0, 1, 2, 3, 4]\n",
+    "# Display array\n",
+    "print(\"Original array order:\\n\", array, type(array))\n",
+    "\n",
+    "# shuffle() routine with one array argument\n",
+    "test = np.random.shuffle(array)\n",
+    "# Display result of test\n",
+    "print(\"1st shuffle array order:\\n\", array, type(array))\n",
+    "\n",
+    "# shuffle() routine with one array argument\n",
+    "test = np.random.shuffle(array)\n",
+    "# Display result of test\n",
+    "print(\"2nd shuffle array order:\\n\", array, type(array), \"\\n\")\n",
+    "\n",
+    "# shuffle() routine with one array argument\n",
+    "print(\"What is returned from shuffle() routine is:\", np.random.shuffle(array))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='blue'>[2] _Argument Error_ </font>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# shuffle() routine with No argument\n",
+    "#np.random.shuffle() # without comment generates TypeError takes exactly one argument\n",
+    "\n",
+    "# shuffle() routine with one positive argument\n",
+    "#np.random.shuffle(1) # without comment generates TypeError object has no length\n",
+    "\n",
+    "# shuffle() routine with two positive argument\n",
+    "#np.random.shuffle(1, 2) # without comment generates TypeError takes exactly one argument\n",
+    "\n",
+    "# shuffle() routine with negative argument\n",
+    "#np.random.shuffle(-1) # without comment generates TypeError object has no length"
+   ]
   },
   {
    "cell_type": "markdown",
