beta() size section updated

--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -1507,18 +1507,22 @@
     "\n",
     "$f(x;a,b) = \\frac{1}{B(\\alpha,\\beta)}x^{\\alpha-1}(1-x)^{\\beta-1}$ where the normalisation, B function is $B(\\alpha,\\beta) = \\int_{0}^{1}t^{\\alpha-1}(1-t)^{/beta-1}dt$\n",
     "\n",
-    "The routine requires at least two positional arguments<font color='blue'>[1]</font>. The first and second arguments can be labeled as 'a' and 'b' respectively and have to both positive integers, floats or one dimensional array_like objects (array/list/tuple) that containing number elements only objects.\n",
+    "The routine requires at least two positional arguments<font color='blue'>[1]</font>. The first and second arguments can be labeled as 'a' and 'b' respectively and both have to either positive integers, floats or one dimensional array_like objects (array/list/tuple) that containing number elements only objects.\n",
     "\n",
-    "Strings are not acceptable arguments as they generate TypeError or ValueError. 'a' and 'b' can not be multi-dimensional array_like objects and if both are array_like object have to be of the same size, otherwise a ValueError is generated.\n",
+    "Strings are not acceptable arguments as they generate TypeError or ValueError. 'a' and 'b' can not be multi-dimensional array_like objects and if both are array_like objects, they have to be of the same size, otherwise a ValueError is generated.\n",
     "\n",
-    "When two number arguments for 'a' and 'b' are used the routine generates a float between 0 and 1.0<font color='blue'>[2]</font>. If either or both of the 'a' and 'b' arguments are array_like objects, the routine generates a NumPy ndarray the size of which depends on the size of the array_like object.\n",
+    "When two number arguments for 'a' and 'b' are used the routine generates a float between 0.0 and 1.0<font color='blue'>[2]</font>. If either or both of the 'a' and 'b' arguments are array_like objects, the routine generates a NumPy ndarray the size of which depends on the size of the array_like object.\n",
+    "\n",
+    "Adding a third argument determines the size of the resulting ndarray<font color='blue'>[3]</font>. The third argument can be labeled as **size** and can be an integer or an array. Size cannot be a float value and if size is used 'a' and 'b' have to be integer values, otherwise TypeError or ValueError are generated respectively<font color='blue'>[1]</font>. The size argument determines the size and shape of the resulting ndarrary<font color='blue'>[3]</font>.\n",
+    "\n",
+    "\n",
     "\n",
     "<font color='blue'>[1] _Argument errors_ </font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1552,13 @@
     "#np.random.beta([[1, 2, 3, 4], [5, 6, 7]], 1) # without comment generates ValueError\n",
     "\n",
     "# beta() routine with a=number and b=2-d array argument\n",
-    "#np.random.beta(1, [[1, 2, 3, 4], [5, 6, 7]]) # without comment generates ValueError"
+    "#np.random.beta(1, [[1, 2, 3, 4], [5, 6, 7]]) # without comment generates ValueError\n",
+    "\n",
+    "# beta() routine with size = float\n",
+    "#np.random.beta(a=2, b=3, size=5.5) # without comment generates TypeError \n",
+    "\n",
+    "# beta() routine with a/b=array size=int\n",
+    "#np.random.beta(a=[4, 5], b=[6, 8], size=4) # without comment generates ValueError"
    ]
   },
   {
@@ -1560,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1568,16 +1578,16 @@
      "output_type": "stream",
      "text": [
       "Two number arguments:\n",
-      " 0.03138348985213958 <class 'float'> \n",
+      " 0.31241125806519243 <class 'float'> \n",
       "\n",
       "a=array/list/tuple, b=number:\n",
-      " [0.99781869 0.9296318  0.78404829 0.64505177 0.60683593] <class 'numpy.ndarray'> \n",
+      " [0.99694084 0.82673379 0.72759569 0.69572893 0.78846024] <class 'numpy.ndarray'> \n",
       "\n",
       "a=array/list/tuple, b=number:\n",
-      " [0.49955697 0.89546159 0.61115503 0.95503747] <class 'numpy.ndarray'> \n",
+      " [0.31246084 0.92179457 0.99880004 0.8593501 ] <class 'numpy.ndarray'> \n",
       "\n",
       "a=array/list/tuple, b=number:\n",
-      " [0.32235654 0.35842675 0.25189123] <class 'numpy.ndarray'>\n"
+      " [0.03880028 0.50780876 0.23690903] <class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -1588,17 +1598,17 @@
     "print(\"Two number arguments:\\n\", test, type(test), \"\\n\")\n",
     "\n",
     "# beta() routine with a=number argument and b=array/list/tuple\n",
-    "test = np.random.beta(13, [1, 2, 3, 4, 5])\n",
+    "test = np.random.beta(a=13, b=[1, 2, 3, 4, 5])\n",
     "# Print result of test\n",
     "print(\"a=array/list/tuple, b=number:\\n\", test, type(test), \"\\n\")\n",
     "\n",
     "# beta() routine with a=array/list/tuple argument and b=number\n",
-    "test = np.random.beta([1, 2, 3, 4], 1)\n",
+    "test = np.random.beta(a=[1, 2, 3, 4], b=1)\n",
     "# Print result of test\n",
     "print(\"a=array/list/tuple, b=number:\\n\", test, type(test), \"\\n\")\n",
     "\n",
     "# beta() routine with a and b =array/list/tuple argument\n",
-    "test = np.random.beta([1, 2, 3], [5, 6, 7])\n",
+    "test = np.random.beta(a=[1, 2, 3], b=[5, 6, 7])\n",
     "# Print result of test\n",
     "print(\"a=array/list/tuple, b=number:\\n\", test, type(test))"
    ]
@@ -1607,8 +1617,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>[2] _Size argument_ </font>"
+    "<font color='blue'>[3] _Size argument_ </font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Three number arguments:\n",
+      " [0.23773054 0.24122899 0.09632048 0.53757849 0.3431026 ] <class 'numpy.ndarray'> \n",
+      "\n",
+      "Size = multi-dimensional array:\n",
+      " [[[0.59574761 0.54459366 0.56460895]\n",
+      "  [0.35916979 0.27810323 0.05961723]]\n",
+      "\n",
+      " [[0.68298118 0.49713837 0.11519958]\n",
+      "  [0.16899673 0.56692742 0.35634268]]\n",
+      "\n",
+      " [[0.57069515 0.21216965 0.31923952]\n",
+      "  [0.54142192 0.48020832 0.42906819]]\n",
+      "\n",
+      " [[0.53885055 0.59143113 0.3105842 ]\n",
+      "  [0.25639305 0.58027419 0.83577042]]] <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# beta() routine with three number argument\n",
+    "test = np.random.beta(2, 3, 5)\n",
+    "# Print result of test\n",
+    "print(\"Three number arguments:\\n\", test, type(test), \"\\n\")\n",
+    "\n",
+    "# beta() routine with size = multi-dimentional array\n",
+    "test = np.random.beta(a=2, b=3, size=[4, 2, 3])\n",
+    "# Print result of test\n",
+    "print(\"Size = multi-dimensional array:\\n\", test, type(test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
