--- a/numpy-random-review.ipynb
+++ b/numpy-random-review.ipynb
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>[3] _Low and high number arguments_ </font>"
+    "<font color='blue'>[3] *Low and high number arguments* </font>"
    ]
   },
   {
